"发现" = "Discover";
"行程" = "Plans";
"创建" = "Create";
"社群" = "Communities";
"我的" = "Profile";
"东京" = "Tokyo";
"神奈川" = "Kanagawa";
"大阪" = "Osaka";
"京都" = "Kyoto";
"日本" = "Japan";
...
